# syncinput

./: CLAUDE.md  Cargo.toml  README.md  build.rs  main.py
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/syncinput/: FloatingService.kt  MainActivity.kt
android/app/src/main/res/drawable/: bubble_bg.xml  ic_bubble.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
src/: main.rs
templates/: index.html
