[package]
name = "syncinput"
version = "0.2.0"
edition = "2024"

[dependencies]
tao = "0.33"
wry = "0.53"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
image = { version = "0.25", default-features = false, features = ["png"] }
mslnk = "0.1"
tray-icon = "0.19"
arboard = "3"
muda = "0.15"
